--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</form>
 			<nav id="mpcth_menu">
 				<ul>
-					<li><a href="default.htm">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="pages/sobre.html">Sobre</a></li>
 					<li><a href="pages/contact.php">Contato</a></li>
 				</ul>
